<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="Home" />
    <item
        android:id="@+id/inventoryFragment"
        android:icon="@drawable/ic_inventory"
        android:title="Inventory" />
    <item
        android:id="@+id/transactionFragment"
        android:icon="@drawable/ic_transaction"
        android:title="Transaction" />
    <item
        android:id="@+id/logsFragment"
        android:icon="@drawable/ic_logs"
        android:title="Logs" />
</menu>